--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,6 +16,49 @@ header{
     border-radius: 15px;
 }
 
+.dropdown-tags {
+    position:relative;
+    width: 100%;
+
+    &-toggle {
+        border: 1px solid grey;
+        padding: 8px;
+        cursor: pointer;
+        width: 100%;
+        text-align: left;
+    }
+
+    &-menu {
+        display: none;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        border: 1px solid grey;
+        z-index: 2;
+        padding: 10px;
+    }
+
+    &-options {
+        max-height: 150px;
+        overflow-y: auto;
+        margin-top: 8px;
+    }
+
+    &-option {
+        padding: 5px;
+        cursor: pointer;
+
+        &:hover {
+            background-color: grey;
+        }
+    }
+    &.active .dropdown-menu {
+        display: block;
+    }
+}
+
+
 .recipes-counter{
     font-family: 'Anton', sans-serif;
     font-size: 21px;
