--- a/css/style.css
+++ b/css/style.css
@@ -28,10 +28,15 @@ header {
   border-radius: 15px;
   border: 1px solid grey;
   background-color: white;
-  padding: 8px;
+  padding: 17px 18px;
   cursor: pointer;
   width: 100%;
-  text-align: left;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.dropdown-toggle::after {
+  content: none;
 }
 
 .dropdown-menu {
@@ -43,17 +48,31 @@ header {
   border: 1px solid grey;
   z-index: 2;
   padding: 10px;
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+  border-top: none;
 }
 
 .dropdown-input_group {
   display: flex;
-  flex-direction: row;
   align-items: center;
-  width: 100%;
+  box-sizing: content-box;
+  border: 1px solid rgb(198, 198, 198);
 }
 
 .dropdown-search {
   flex: 1;
+  padding: 8px;
+  border: none;
+  box-sizing: border-box;
+  width: 100%;
+}
+
+.dropdown-btn {
+  background-color: white;
+  border: none;
   padding: 8px;
 }
 
@@ -78,7 +97,7 @@ header {
   cursor: pointer;
 }
 .dropdown-option:hover {
-  background-color: grey;
+  background-color: rgb(255, 209, 91);
 }
 
 .tag {
@@ -87,6 +106,7 @@ header {
   display: flex;
   justify-content: space-between;
   cursor: pointer;
+  padding: 17px 18px;
 }
 
 .recipes-counter {
